fix(VBtnGroup): set vertical-align

--- a/packages/vuetify/src/components/VBtnGroup/VBtnGroup.sass
+++ b/packages/vuetify/src/components/VBtnGroup/VBtnGroup.sass
@@ -13,6 +13,7 @@
   max-width: 100%
   min-width: 0
   overflow: hidden
+  vertical-align: middle
 
   @include tools.border($btn-group-border...)
   @include tools.elevation($btn-group-elevation)
